# ai-open-sdlc-kit

./: .gitignore  AGENTS.md  LICENSE  README.md  opencode.json  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  opencode.yml  pr-check.yml  release.yml
.opencode/: .gitignore  package-lock.json  package.json
.opencode/skills/analyze/: SKILL.md
.opencode/skills/plan/: SKILL.md
.opencode/skills/version-management/: SKILL.md
.opencode/skills/wiki/: SKILL.md
src/osdlc/: __main__.py  cli.py  detector.py  llm.py  scaffold.py  templates.py  version.py  wiki.py
tests/: conftest.py  test_cli.py  test_detector.py  test_e2e.py  test_integration.py  test_scaffold.py  test_templates.py  test_version.py  test_wiki.py
