[project]
name = "osdlc-kit"
version = "0.5.1"
description = "CLI scaffolding tool that bootstraps any Git repository with an opencode-native SDLC methodology"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Andrea Schiona", email = "andrea@schiona.dev" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/andreaschiona/ai-open-sdlc-kit"
Repository = "https://github.com/andreaschiona/ai-open-sdlc-kit"

[project.scripts]
osdlc = "osdlc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osdlc"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
